[#38] add new key in env.example

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ DB_PASS=mysecretpassword
 
 # jwt
 SECRET_KEY=darultechleadopimbaparah
+
+# cloudinary
+CLOUDY_API_KEY=
+CLOUDY_API_SECRET=
+CLOUDY_NAME=
