--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -6,7 +6,7 @@ COPY . .
 
 RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -o starfish ./cmd/api/main.go
 
-FROM scratch
+FROM alpine
 
 WORKDIR /apps
 
