get file size value from env

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ SECRET_KEY=darultechleadopimbaparah
 CLOUDY_API_KEY=
 CLOUDY_API_SECRET=
 CLOUDY_NAME=
+CLOUDY_IMAGE_SIZE=1 #write down the number, for example 1 means 1mb
+CLOUDY_VIDEO_SIZE=5 #write down the number, for example 5 means 5mb
